--- a/style.css
+++ b/style.css
@@ -1,1 +1,35 @@
-Tampilan web
+body{
+  background:#0f172a;
+  font-family:Arial, sans-serif;
+  color:white;
+  display:flex;
+  justify-content:center;
+  padding:20px;
+}
+
+.box{
+  background:#1e293b;
+  padding:20px;
+  border-radius:12px;
+  width:460px;
+}
+
+select,textarea,button{
+  width:100%;
+  margin-top:10px;
+  padding:10px;
+  border-radius:6px;
+  border:none;
+}
+
+textarea{height:250px}
+
+button{
+  background:#38bdf8;
+  font-weight:bold;
+  cursor:pointer;
+  margin-top:5px;
+}
+
+h1{margin-bottom:15px}
+hr{border:1px solid #334155;margin:15px 0;}
